2001-07-06  Daniel Jacobowitz  <drow@mvista.com>

        * configure.in: Remove NATIVE, NULL_TARGET.
        Set CANADIAN only for Canadian crosses.  Set xcompiling
        for both Canadian crosses and host-x-host crosses.
        * configure: Regenerated.

2001-07-06  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

        * include/bits/stl_vector.h (vector::_M_initialize_aux): Fix typo.

2001-07-05  Jason Merrill  <jason_merrill@redhat.com>

	* testsuite_flags.in (--build-includes): backward, not backwards.

2001-07-04  Jeffrey Oldham  <oldham@codesourcery.com>

	* include/ext/ropeimpl.h (_Rope_RopeRep::_M_free_c_string):
	Replace destroy by _Destroy.
	(_Rope_RopeRep::_S_free_string): Likewise.
	(rope::c_str()): Likewise.
	* include/ext/slist (_Slist_base::_M_erase_after>): Likewise.
	(_Slist_base::_M_erase_after): Likewise.
	(slist::_M_create_node): Replace construct by _Construct.
	(slist::pop_front): Replace destroy by _Destroy.
	* include/ext/stl_hashtable.h (hashtable::_M_new_node): Replace
	construct by _Construct.
	(hashtable::_M_delete_node): Replace destroy by _Destroy.
	* include/ext/stl_rope.h (rope::rope): Replace construct by
	_Construct.
	(rope::copy): Replace destroy by _Destroy.

2001-07-03  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/localefwd.h: Format.	
	* include/bits/locale_facts.tcc (locale::combine): Adjust.
	* src/locale.cc (locale::locale::(_Impl)): Don't call
	_M_add_reference.
	(locale::facet::_M_remove_reference): Simplify.
	* src/globals.cc (locale_impl_c): New. Format.
	(locale_c): New.
	* src/ios.cc (ios_base::Init::Init): Increment _S_ios_base_init last.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Protect variable from shell
	expansion (thanks to Alexandre Oliva).
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-07-02  Benjamin Kosnik  <bkoz@redhat.com>
	
	* src/locale.cc (locale::locale(const char*)): Make sure global
	locales are initialized.